# letras

./: .Rbuildignore  .dockerignore  .gitignore  DESCRIPTION  Dockerfile  LICENSE  LICENSE.md  NAMESPACE  README.Rmd  README.md  docker-compose.yaml  main.py  pyproject.toml  temp.rda
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.docker/: start.sh
.github/: codecov.yaml
.github/workflows/: atualizar-dados.yaml  full.yaml  incremental.yaml  release.yaml  test.yaml
R/: data.R  globals.R  obter-letras.R
configs/: config.yaml  filters.yaml
core/: filters.py  runner.py  scrapper.py  utils.py
data/: artistas.rda  musicas.rda
data-raw/: atualizar-dados.R
inst/csv/: artistas.csv  musicas.csv
inst/txt/: 0000 - Victor Viana.txt  1 Timóteo 316 - Santa Geração.txt  10 Mandamentos - Dunga.txt  10 Mil Razões - Arena Louvor.txt  100  Cem Por Cento - Alex  Alex.txt  100 Homem 100 Deus - Bruna Olly.txt  1000 Bolinhas de Sabão - Aline Barros.txt  1000 Bolitas de Jabón - Aline Barros.txt  1000 Megatons - Rodox.txt  10000 Razones - Aline Barros.txt  10000 Reasons - Jesus Culture.txt  10000 Reasons Bless The Lord - Aline Barros.txt  10000 Years - Stryper.txt  123 - Mara Maravilha.txt  123 Victory - Kirk Franklin.txt  13 de Julho - DJ Alpiste.txt  139 - Diante do Trono.txt  139 - Nívea Soares.txt  15 Andar - Catedral.txt  15 de Maio - Rayssa e Ravel.txt  16 Uma Idade Especial - Hinos Sud.txt  17 de Janeiro - Tiago e André Arrais.txt  180 Graus - Missionário Shalom.txt  188 - Priscilla Alcântara.txt  19 - Léa Mendonça.txt  1974 - Amy Grant.txt  1980 - Ao Cubo.txt  1990 - Michael W Smith.txt  2 Timóteo 3 - Vanilda Bordieri.txt  2 X Mais - Celia Sakamoto.txt  2000 Anos - Os Levitas.txt  21 - Tiago e André Arrais.txt  24 - Switchfoot.txt  24 Horas - Cassiane.txt  24 Horas - Mara Lima.txt  24 Horas - Marcelo Dias e Fabiana.txt  24 Horas - Suellen Lima.txt  24 Horas Comigo - Shirley Kaiser.txt  24 Horas Na Pressão - Shekinah Rap.txt  (+36638 more)
man/: artistas.Rd  dados_atualizados.Rd  letras.Rd  musicas.Rd
src/letras/: __main__.py  (+1 more)
tests/: conftest.py  test_cli.py  test_filters.py  test_runner.py  test_scrapper.py  test_utils.py
(+28 files in other folders)
