[tool.poetry]
name = "letras"
version = "0.1.0"
description = "Automated collection and organization of gospel lyrics"
authors = ["Daniel Amaral <silva.daniel86@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
polars = "^1.12.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
python-box = "^7.2.0"
python-dotenv = "^1.0.1"
rich = "^13.9.4"
duckdb = "^1.1.2"
numpy = "^2.1.3"
lingua-language-detector = "^2.0.2"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-watch = "^4.2.0"
pyarrow = "^18.0.0"
pandas = "^2.2.3"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=core --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100